--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -4,6 +4,8 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+  --height-event-card: var(--height-event-card);
+  --height-header: var(--height-header);
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -44,12 +46,12 @@
   --color-sidebar-ring: var(--sidebar-ring);
 }
 
-:root {
-  color-scheme: light dark;
-}
-
-.colorfull {
+.sizes {
+  --height-event-card: 60px;
+  --height-header: 48px;
   --radius: 0.625rem;
+}
+.colorfull {
   --background: #f5f7fb; /* soft off-white */
   --foreground: #0f1724; /* slate-900 */
   --card: #ffffff;
@@ -99,7 +101,7 @@
   --accent: #f59e0b;
   --accent-foreground: #0b1220;
   --destructive: #ef4444;
-  --border: rgba(255,255,255,0.06);
+  --border: rgba(255, 255, 255, 0.06);
   --input: #071023;
   --ring: #93c5fd;
   --chart-1: #60a5fa;
@@ -113,14 +115,11 @@
   --sidebar-primary-foreground: #ffffff;
   --sidebar-accent: #06b6d4;
   --sidebar-accent-foreground: #ffffff;
-  --sidebar-border: rgba(255,255,255,0.06);
+  --sidebar-border: rgba(255, 255, 255, 0.06);
   --sidebar-ring: #93c5fd;
 }
 
-
-
 .serious {
-  --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
@@ -186,9 +185,8 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
-} */
-
-@layer base {
+}
+*/ @layer base {
   * {
     @apply border-border outline-ring/50;
   }
@@ -196,4 +194,3 @@
     @apply bg-background text-foreground;
   }
 }
-
